fix: target Java 17 so the repo builds on the training VM
The Kali training VM ships JDK 17.0.6. Two things stopped this repo from
building there:

  1. gradle.properties pinned org.gradle.java.home to a Windows JDK path
     (added in c480b6a). Gradle reads that before any toolchain logic, so it
     aborted at startup on any other machine with "Java home supplied is
     invalid". Removed - the toolchain in build.gradle selects the JDK, and
     settings.gradle already applies the foojay resolver.

  2. The toolchain required JDK 25, which the VM does not have. Satisfying it
     meant a ~200MB download on first build, no good on a VM that may be
     offline during training.

Lowering the toolchain to 17 needed two source changes, because the code
genuinely used post-17 features:

  Locale.of("de", "DE")        -> new Locale("de", "DE")     (Locale.of is 19+)
  static void main(...)        -> public static void main(...)

The second is subtle: a package-private main compiles fine under 17 but the
17 launcher refuses to start it ("Main method not found, define as public
static void main"). Non-public main is a Java 25 feature (JEP 512).

Docs updated: CLAUDE.md and README.md said JDK 25, and CLAUDE.md still listed
Spring Boot 3.4.4 after the 4.1.1 upgrade.

Verified on the Java 17 toolchain: clean build (bytecode major version 61),
app boots, and every page renders byte-identically to the Java 25 build
(index 13347, ad detail 7522, admin list 16155). Locale switching still works
(de "Suche..." / en "Search..."), exercising the new Locale path. Training
behaviour intact: legacy column ordering holds (id, createdtimestamp,
description, ...), the SQL injection returns 16 ads against 4 for a normal
search, and the error page still exposes the executed statement.

Note this does not change how Gradle itself is launched: Gradle 9.7.1 needs a
JVM of 17+, which on the VM is the IntelliJ "Gradle JVM" setting - point it at
the 17.0.6, not the Java 13 it currently uses.

Co-